buildscript {
    repositories {
        maven {
            url 'https://maven.aliyun.com/repository/public/' //阿里云仓库
        }
        maven { url = 'https://maven.minecraftforge.net' }
        mavenCentral()
        maven { url = 'https://cursemaven.com' }
        maven { url = 'https://maven.parchmentmc.org' }
        maven {
            name "Sponge"
            url "https://repo.spongepowered.org/repository/maven-public/"
            content { includeGroup "org.spongepowered" }
        }
        maven {
            name "Gradle Plugin Portal"
            url 'https://plugins.gradle.org/m2/'
            content {
                includeGroup "gradle.plugin.com.matthewprenger"
                includeGroup "com.modrinth"
            }
        }
    }

    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
        classpath 'gradle.plugin.com.matthewprenger:CurseGradle:1.4.0'
        classpath 'org.parchmentmc:librarian:1.+'
        //
        classpath 'org.spongepowered:mixingradle:0.7.+'
    }
}
apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'org.parchmentmc.librarian.forgegradle'
apply plugin: 'eclipse'
apply plugin: 'idea'
apply plugin: 'com.matthewprenger.cursegradle'
apply plugin: 'maven-publish'
//mixin
apply plugin: 'org.spongepowered.mixin'

version = '1.18.2-0.0.1-Beta'
group = 'ex_enigmaticlegacy'
archivesBaseName = 'EXE'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)
jar {
    manifest {
        attributes([
                //你资源包中的mixin配置文件
                "MixinConfigs": "ex_enigmaticlegacy.mixins.json"
        ])
    }
}
mixin {
    add sourceSets.main, "ex_enigmaticlegacy.refmap.json"
    config "ex_enigmaticlegacy.mixins.json"
}
minecraft {
//    mappings channel: 'official', version: '1.18.2'
    mappings channel: 'parchment', version: '2022.11.06-1.18.2'
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'info'
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${buildDir}/createSrgToMcp/output.srg"
            arg "-mixin.config=ex_enigmaticlegacy.mixins.json"
            mods {
                examplemod {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'info'
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${buildDir}/createSrgToMcp/output.srg"
            arg "-mixin.config=ex_enigmaticlegacy.mixins.json"
            mods {
                examplemod {
                    source sourceSets.main
                }
            }
        }
    }
}

repositories {
    maven {
        url = 'https://cursemaven.com'
        content {
            includeGroup 'curse.maven'
        }
    }
    maven {
        url "https://maven.blamejared.com"
    }
    maven {
        // location of the maven that hosts JEI files before January 2023
        name = "Progwml6's maven"
        url = "https://dvs1.progwml6.com/files/maven/"
    }
    maven {
        // location of the maven that hosts JEI files since January 2023
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }
    maven {
        // location of a maven mirror for JEI files, as a fallback
        name = "ModMaven"
        url = "https://modmaven.dev"
    }
    maven {
        name = "Illusive Soulworks maven"
        url = "https://maven.theillusivec4.top/"
    }
    maven {
        name "Sponge"
        url "https://repo.spongepowered.org/repository/maven-public/"
        content { includeGroup "org.spongepowered" }
    }
    maven {
        name "Gradle Plugin Portal"
        url 'https://plugins.gradle.org/m2/'
        content {
            includeGroup "gradle.plugin.com.matthewprenger"
            includeGroup "com.modrinth"
        }
    }
    repositories {
        maven {
            url = "https://maven.jaackson.me"
        }
    }
    flatDir {
        dirs 'libs'
    }
    maven {
        name = "CottonMC"
        url = "https://server.bbkr.space/artifactory/libs-release"
    }
    maven {
        url = "https://maven.shedaniel.me/"
    }
    maven {
        url = "https://maven.covers1624.net"
    }
    maven {
        url = "https://maven.architectury.dev"
        content {
            includeGroup "me.shedaniel"
        }
    }
    maven {
        url "https://maven.shedaniel.me/"
    }
    maven {
        url = "https://maven.saps.dev/minecraft"
        content {
            includeGroup "dev.latvian.mods"
        }
    }
    maven {
        name = 'Twilight Forest'
        url = 'https://modmaven.dev/'
    }
    maven {
        name = '神秘遗物'
        url = 'https://github.com/Aizistral-Studios/Enigmatic-Legacy/tree/1.18.X'
    }
}


dependencies {
    minecraft 'net.minecraftforge:forge:1.18.2-40.2.9'

    implementation fg.deobf("curse.maven:citadel-331936:3783096")
    implementation fg.deobf("curse.maven:ice-and-fire-dragons-264231:4614465")
    implementation fg.deobf("curse.maven:playeranimator-658587:4418152")
    implementation fg.deobf("curse.maven:irons-spells-n-spellbooks-855414:5275053")

    //jei
    compileOnly(fg.deobf("mezz.jei:jei-1.18.2-common-api:10.2.1.1008"))
    compileOnly(fg.deobf("mezz.jei:jei-1.18.2-forge-api:10.2.1.1008"))
    runtimeOnly(fg.deobf("mezz.jei:jei-1.18.2-forge:10.2.1.1008"))

    //jade
    implementation fg.deobf("curse.maven:jade-324717:5079263")

    //curios
    compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:1.18.2-5.0.9.2")
    runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:1.18.2-5.0.9.2")

    //植物魔法
    compileOnly fg.deobf("vazkii.botania:Botania:1.18.2-435:api")
    runtimeOnly fg.deobf("vazkii.botania:Botania:1.18.2-435")
    compileOnly fg.deobf("vazkii.botania:Botania:1.18.2-435")

    //patchouli
    compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.18.2-71.1:api")
    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.18.2-71.1")
    compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.18.2-71.1")

    //无尽贪婪
//    compileOnly fg.deobf("curse.maven:avaritia-1-10-261348:4406602")
//    runtimeOnly fg.deobf("curse.maven:avaritia-1-10-261348:4406602")
    implementation fg.deobf("curse.maven:avaritia-endless-624491:6489780")

    //codechickenlib
    compileOnly fg.deobf("codechicken:CodeChickenLib:1.18.2-4.1.4.488:universal")
    runtimeOnly fg.deobf("codechicken:CodeChickenLib:1.18.2-4.1.4.488:universal")

    //等价交换
    //implementation fg.deobf("curse.maven:projecte-226410:4860857")
    compileOnly fg.deobf("curse.maven:projecte-226410:4860857")
    runtimeOnly fg.deobf("curse.maven:projecte-226410:4860857")

    //神秘遗物
    compileOnly fg.deobf("curse.maven:enigmatic-legacy-336184:4074264")
    runtimeOnly fg.deobf("curse.maven:enigmatic-legacy-336184:4074264")

    //神秘遗物附属
    //implementation fg.deobf("curse.maven:enigmatic-addons-1030121:5727873")

    //caelus
    compileOnly fg.deobf("curse.maven:caelus-308989:3650485")
    runtimeOnly fg.deobf("curse.maven:caelus-308989:3650485")

    //CrT
    compileOnly fg.deobf('com.blamejared.crafttweaker:CraftTweaker-forge-1.18.2:9.1.116')
//    runtimeOnly fg.deobf('com.blamejared.crafttweaker:CraftTweaker-forge-1.18.2:9.1.116')

    //鼠标手势
//    runtimeOnly fg.deobf("curse.maven:mouse-tweaks-60089:3578801")

    //geckolib
    runtimeOnly fg.deobf("curse.maven:geckolib-388172:4181370")

    //mob-battle
    runtimeOnly fg.deobf("curse.maven:mob-battle-mod-268746:4748498")

    //blueprint
    //implementation fg.deobf("com.teamabnormals:blueprint:1.18.2-5.5.0")

    //测试光影下是否bug
    //implementation fg.deobf("curse.maven:oculus-581495:4578744")
    //implementation fg.deobf("curse.maven:rubidium-574856:4494903")

    //属性修复
    compileOnly fg.deobf("curse.maven:attributefix-280510:5312029")
    runtimeOnly fg.deobf("curse.maven:attributefix-280510:5312029")

    //twilight forest
    compileOnly fg.deobf("teamtwilight:twilightforest:4.1.1494:universal")
//    runtimeOnly fg.deobf("teamtwilight:twilightforest:4.1.1494:universal")


    //mixin
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
}
tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

//apply from: 'ex_enigmaticlegacy.gradle'

